# lapala

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ingest.yml
api/: main.py  requirements.txt
api/alembic/: env.py
api/alembic/versions/: e551cc9b4a3b_initial_schema.py
api/db/: __init__.py  base.py  session.py
api/db/models/: __init__.py  cv.py  job.py  match.py  profile.py
api/routers/: ai.py  cv.py
apps/api/: main.py
apps/api/routers/: ai.py  cv.py
apps/web/: pnpm-lock.yaml
apps/web/src/features/ai/: index.ts
apps/web/src/features/jobs/: index.ts
apps/web/src/layouts/: Layout.astro
apps/web/src/pages/: index.astro
examples/: cv_ejemplo.yaml
scrapers/: requirements.txt  run_ingest.py
scrapers/lapala_scrapers/: __init__.py  models.py
scrapers/lapala_scrapers/sources/: bne.py  chiletrabajos.py  computrabajo.py  greenhouse.py
src/api/: requirements.txt
src/scrapers/: pyproject.toml
src/scrapers/lapala_scrapers/: __init__.py
src/web/: package.json  pnpm-workspace.yaml
src/web/src/lib/: supabase.ts
supabase/migrations/: 0001_init.sql
web/: astro.config.mjs  package.json  pnpm-lock.yaml
web/src/features/ai/: AIPanel.tsx  AiLimitBar.tsx  index.ts  useAiLimit.ts
web/src/features/cv/: CVBuilder.tsx  index.ts  yamlBuilder.ts
web/src/features/jobs/: JobCard.tsx  JobFilters.tsx  JobList.tsx
web/src/layouts/: Layout.astro
web/src/pages/: ai.astro  cv.astro  index.astro
(+1 files in other folders)
