[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "lapala-scrapers"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "selectolax>=0.3.21",
    "python-dotenv>=1.0.0",
    "supabase>=2.9.0",
    "pydantic>=2.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lapala_scrapers*"]
